force-app/main/default/objects/GRV_PosSettingLimits__c/GRV_PosSettingLimits__c.object-meta.xml
<CustomObject>
    <label>GRV_PosSettingLimits</label>
    <nameField>
        <label>GRV_PosSettingLimits</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GRV_PosSettingLimits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>