force-app/main/default/objects/GRV_PosSettingLimits__c/fields/BackpressureLL__c.field-meta.xml
<CustomField>
    <fullName>BackpressureLL__c</fullName>
    <label>BackpressureLL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>