force-app/main/default/objects/GRV_PosSettingLimits__c/fields/PressureDesign__c.field-meta.xml
<CustomField>
    <fullName>PressureDesign__c</fullName>
    <label>PressureDesign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>