force-app/main/default/objects/GRV_PosSettingLimits__c/fields/PressureLoad__c.field-meta.xml
<CustomField>
    <fullName>PressureLoad__c</fullName>
    <label>PressureLoad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>