force-app/main/default/objects/GRV_PosSettingLimits__c/fields/SpacerYN__c.field-meta.xml
<CustomField>
    <fullName>SpacerYN__c</fullName>
    <label>SpacerYN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>