force-app/main/default/objects/GRV_PosSettingLimits__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTC__c</columns>
    <columns>SZC__c</columns>
    <columns>BackpressureLL__c</columns>
    <columns>BackpressureUL__c</columns>
    <columns>SettingLL__c</columns>
    <columns>SettingUL__c</columns>
    <columns>PalletMatlCode__c</columns>
    <columns>WeightMatlCode__c</columns>
    <columns>PalletType__c</columns>
    <columns>PalletDesign__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>